Tutorijali/T5/Z1/.gcc.out
/rhome/a/amehmedic1/workspace/TP/T5/Z1/main.cpp: In function ‘int main()’:
/rhome/a/amehmedic1/workspace/TP/T5/Z1/main.cpp:55:12: error: no match for ‘operator<’ (operand types are ‘std::ostream {aka std::basic_ostream<char>}’ and ‘const char [2]’)
  std::cout <"\n";
  ~~~~~~~~~~^~~~~
In file included from /usr/include/c++/7/bits/ios_base.h:46:0,
                 from /usr/include/c++/7/ios:42,
                 from /usr/include/c++/7/ostream:38,
                 from /usr/include/c++/7/iostream:39,
                 from /rhome/a/amehmedic1/workspace/TP/T5/Z1/main.cpp:15:
/usr/include/c++/7/system_error:282:3: note: candidate: bool std::operator<(const std::error_condition&, const std::error_condition&)
   operator<(const error_condition& __lhs,
   ^~~~~~~~
/usr/include/c++/7/system_error:282:3: note:   no known conversion for argument 1 from ‘std::ostream {aka std::basic_ostream<char>}’ to ‘const std::error_condition&’
/usr/include/c++/7/system_error:208:3: note: candidate: bool std::operator<(const std::error_code&, const std::error_code&)
   operator<(const error_code& __lhs, const error_code& __rhs) noexcept
   ^~~~~~~~
/usr/include/c++/7/system_error:208:3: note:   no known conversion for argument 1 from ‘std::ostream {aka std::basic_ostream<char>}’ to ‘const std::error_code&’
In file included from /usr/include/c++/7/string:52:0,
                 from /usr/include/c++/7/bits/locale_classes.h:40,
                 from /usr/include/c++/7/bits/ios_base.h:41,
                 from /usr/include/c++/7/ios:42,
                 from /usr/include/c++/7/ostream:38,
                 from /usr/include/c++/7/iostream:39,
                 from /rhome/a/amehmedic1/workspace/TP/T5/Z1/main.cpp:15:
/usr/include/c++/7/bits/basic_string.h:6110:5: note: candidate: template<class _CharT, class _Traits, class _Alloc> bool std::operator<(const _CharT*, const std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&)
     operator<(const _CharT* __lhs,
     ^~~~~~~~
/usr/include/c++/7/bits/basic_string.h:6110:5: note:   template argument deduction/substitution failed:
/rhome/a/amehmedic1/workspace/TP/T5/Z1/main.cpp:55:13: note:   mismatched types ‘const _CharT*’ and ‘std::basic_ostream<char>’
  std::cout <"\n";
             ^~~~
In file included from /usr/include/c++/7/string:52:0,
                 from /usr/include/c++/7/bits/locale_classes.h:40,
                 from /usr/include/c++/7/bits/ios_base.h:41,
                 from /usr/include/c++/7/ios:42,
                 from /usr/include/c++/7/ostream:38,
                 from /usr/include/c++/7/iostream:39,
                 from /rhome/a/amehmedic1/workspace/TP/T5/Z1/main.cpp:15:
/usr/include/c++/7/bits/basic_string.h:6098:5: note: candidate: template<class _CharT, class _Traits, class _Alloc> bool std::operator<(const std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&, const _CharT*)
     operator<(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
     ^~~~~~~~
/usr/include/c++/7/bits/basic_string.h:6098:5: note:   template argument deduction/substitution failed:
/rhome/a/amehmedic1/workspace/TP/T5/Z1/main.cpp:55:13: note:   ‘std::ostream {aka std::basic_ostream<char>}’ is not derived from ‘const std::__cxx11::basic_string<_CharT, _Traits, _Alloc>’
  std::cout <"\n";
             ^~~~
In file included from /usr/include/c++/7/string:52:0,
                 from /usr/include/c++/7/bits/locale_classes.h:40,
                 from /usr/include/c++/7/bits/ios_base.h:41,
                 from /usr/include/c++/7/ios:42,
                 from /usr/include/c++/7/ostream:38,
                 from /usr/include/c++/7/iostream:39,
                 from /rhome/a/amehmedic1/workspace/TP/T5/Z1/main.cpp:15:
/usr/include/c++/7/bits/basic_string.h:6085:5: note: candidate: template<class _CharT, class _Traits, class _Alloc> bool std::operator<(const std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&, const std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&)
     operator<(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
     ^~~~~~~~
/usr/include/c++/7/bits/basic_string.h:6085:5: note:   template argument deduction/substitution failed:
/rhome/a/amehmedic1/workspace/TP/T5/Z1/main.cpp:55:13: note:   ‘std::ostream {aka std::basic_ostream<char>}’ is not derived from ‘const std::__cxx11::basic_string<_CharT, _Traits, _Alloc>’
  std::cout <"\n";
             ^~~~
In file included from /usr/include/c++/7/bits/stl_algobase.h:67:0,
                 from /usr/include/c++/7/bits/char_traits.h:39,
                 from /usr/include/c++/7/ios:40,
                 from /usr/include/c++/7/ostream:38,
                 from /usr/include/c++/7/iostream:39,
                 from /rhome/a/amehmedic1/workspace/TP/T5/Z1/main.cpp:15:
/usr/include/c++/7/bits/stl_iterator.h:1148:5: note: candidate: template<class _Iterator> bool std::operator<(const std::move_iterator<_IteratorL>&, const std::move_iterator<_IteratorL>&)
     operator<(const move_iterator<_Iterator>& __x,
     ^~~~~~~~
/usr/include/c++/7/bits/stl_iterator.h:1148:5: note:   template argument deduction/substitution failed:
/rhome/a/amehmedic1/workspace/TP/T5/Z1/main.cpp:55:13: note:   ‘std::ostream {aka std::basic_ostream<char>}’ is not derived from ‘const std::move_iterator<_IteratorL>’
  std::cout <"\n";
             ^~~~
In file included from /usr/include/c++/7/bits/stl_algobase.h:67:0,
                 from /usr/include/c++/7/bits/char_traits.h:39,
                 from /usr/include/c++/7/ios:40,
                 from /usr/include/c++/7/ostream:38,
                 from /usr/include/c++/7/iostream:39,
                 from /rhome/a/amehmedic1/workspace/TP/T5/Z1/main.cpp:15:
/usr/include/c++/7/bits/stl_iterator.h:1142:5: note: candidate: template<class _IteratorL, class _IteratorR> bool std::operator<(const std::move_iterator<_IteratorL>&, const std::move_iterator<_IteratorR>&)
     operator<(const move_iterator<_IteratorL>& __x,
     ^~~~~~~~
/usr/include/c++/7/bits/stl_iterator.h:1142:5: note:   template argument deduction/substitution failed:
/rhome/a/amehmedic1/workspace/TP/T5/Z1/main.cpp:55:13: note:   ‘std::ostream {aka std::basic_ostream<char>}’ is not derived from ‘const std::move_iterator<_IteratorL>’
  std::cout <"\n";
             ^~~~
In file included from /usr/include/c++/7/bits/stl_algobase.h:67:0,
                 from /usr/include/c++/7/bits/char_traits.h:39,
                 from /usr/include/c++/7/ios:40,
                 from /usr/include/c++/7/ostream:38,
                 from /usr/include/c++/7/iostream:39,
                 from /rhome/a/amehmedic1/workspace/TP/T5/Z1/main.cpp:15:
/usr/include/c++/7/bits/stl_iterator.h:343:5: note: candidate: template<class _IteratorL, class _IteratorR> bool std::operator<(const std::reverse_iterator<_Iterator>&, const std::reverse_iterator<_IteratorR>&)
     operator<(const reverse_iterator<_IteratorL>& __x,
     ^~~~~~~~
/usr/include/c++/7/bits/stl_iterator.h:343:5: note:   template argument deduction/substitution failed:
/rhome/a/amehmedic1/workspace/TP/T5/Z1/main.cpp:55:13: note:   ‘std::ostream {aka std::basic_ostream<char>}’ is not derived from ‘const std::reverse_iterator<_Iterator>’
  std::cout <"\n";
             ^~~~
In file included from /usr/include/c++/7/bits/stl_algobase.h:67:0,
                 from /usr/include/c++/7/bits/char_traits.h:39,
                 from /usr/include/c++/7/ios:40,
                 from /usr/include/c++/7/ostream:38,
                 from /usr/include/c++/7/iostream:39,
                 from /rhome/a/amehmedic1/workspace/TP/T5/Z1/main.cpp:15:
/usr/include/c++/7/bits/stl_iterator.h:305:5: note: candidate: template<class _Iterator> bool std::operator<(const std::reverse_iterator<_Iterator>&, const std::reverse_iterator<_Iterator>&)
     operator<(const reverse_iterator<_Iterator>& __x,
     ^~~~~~~~
/usr/include/c++/7/bits/stl_iterator.h:305:5: note:   template argument deduction/substitution failed:
/rhome/a/amehmedic1/workspace/TP/T5/Z1/main.cpp:55:13: note:   ‘std::ostream {aka std::basic_ostream<char>}’ is not derived from ‘const std::reverse_iterator<_Iterator>’
  std::cout <"\n";
             ^~~~
In file included from /usr/include/c++/7/bits/stl_algobase.h:64:0,
                 from /usr/include/c++/7/bits/char_traits.h:39,
                 from /usr/include/c++/7/ios:40,
                 from /usr/include/c++/7/ostream:38,
                 from /usr/include/c++/7/iostream:39,
                 from /rhome/a/amehmedic1/workspace/TP/T5/Z1/main.cpp:15:
/usr/include/c++/7/bits/stl_pair.h:449:5: note: candidate: template<class _T1, class _T2> constexpr bool std::operator<(const std::pair<_T1, _T2>&, const std::pair<_T1, _T2>&)
     operator<(const pair<_T1, _T2>& __x, const pair<_T1, _T2>& __y)
     ^~~~~~~~
/usr/include/c++/7/bits/stl_pair.h:449:5: note:   template argument deduction/substitution failed:
/rhome/a/amehmedic1/workspace/TP/T5/Z1/main.cpp:55:13: note:   ‘std::ostream {aka std::basic_ostream<char>}’ is not derived from ‘const std::pair<_T1, _T2>’
  std::cout <"\n";
             ^~~~
